--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <div class="container">
+    <center>
+        <h1 font-size="1">Scircles</h1>
+        <h2 font-size="12">(Public Map/Concept Mind Social Network for Scientists, Scientific Skeptics and everyone who is interested in Science!)</h2>
     <head>
         <script type="text/javascript" src="../../vis-network/dist/vis.js"></script>
         <link href="../../vis-network/dist/vis.css" rel="stylesheet" type="text/css" />
@@ -18,17 +21,21 @@
     <div id="mynetwork"></div>
 
     <script type="text/javascript">
+
+
         // create an array with nodes
         var nodes = new vis.DataSet([
             {id: 1, label: 'Physics'},
-            {id: 2, label: 'ID'},
+            {id: 2, label: 'ID', first: true},
             {id: 3, label: 'Optics'},
             {id: 4, label: 'Computer Science'},
             {id: 5, label: 'Mathematics'},
             {id: 6, label: 'Art'},
             {id: 7, label: 'Movies'},
             {id: 8, label: 'Science-Art'},
-            {id: 9, label: 'Science'}
+            {id: 9, label: 'Science'},
+            {id: 10, label: 'Quantum Physics'},
+            {id: 11, label: 'Quantum Computers'}
         ]);
 
         // create an array with edges
@@ -41,7 +48,10 @@
             {from: 6, to: 7},
             {from: 6, to: 8},
             {from: 2, to: 9},
-            {from: 8, to: 9}
+            {from: 8, to: 9},
+            {from: 10, to: 1},
+            {from: 11, to: 10},
+            {from: 11, to: 4}
         ]);
 
         // create a network
@@ -58,6 +68,7 @@
         var network = new vis.Network(container, data, options);
     </script>
     </body>
+</center>
 </div>
 <head>
     <base href="/">
