small 'typo' fix

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
 <div class="container">
     <center>
         <h1 font-size="1">Scircles</h1>
-        <h2 font-size="12">(Public Map/Concept Mind Social Network for Scientists, Scientific Skeptics and everyone who is interested in Science!)</h2>
+        <h2 font-size="12">(Public Mind/Concept Map Social Network for Scientists, Scientific Skeptics and everyone who is interested in Science!)</h2>
     <head>
         <script type="text/javascript" src="../../vis-network/dist/vis.js"></script>
         <link href="../../vis-network/dist/vis.css" rel="stylesheet" type="text/css" />
